--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -244,7 +244,7 @@ a {
   color: #fff;
   text-align: center;
   background-color: #3962AC;
-  background-image: linear-gradient(120deg, #3962AC, #DE9CD8); }
+  background-image: linear-gradient(150deg, #6f4282, black); }
 
 .main-content {
   background-color: #fff;
@@ -258,6 +258,7 @@ a {
 
 img {
   margin-top: 1em;
+  width:80%;
 }
 
 a {
@@ -270,4 +271,8 @@ ul, ol {
 
 li {
   margin-top: 1em;
+}
+
+.minipics {
+  width:50%;
 }
